Name:                lojysamsef
Version:             0.1
Description:         A basic API server for modified version of lojysamban
License:             MIT
Author:              sorpa'as plat <sorpaas@gmail.com>
Maintainer:          sorpa'as plat <sorpaas@gmail.com>
Homepage:            https://github.com/sorpaas/lojysamsef
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

extra-source-files:	examples/pendo.jbo, examples/skari.jbo, examples/patfu.jbo
    examples/cidja.jbo, examples/mlatu.jbo

Executable lojysamsef
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
                base                      >= 4     && < 5,
                bytestring                >= 0.9.1 && < 0.11,
                MonadCatchIO-transformers >= 0.2.1 && < 0.4,
                mtl                       >= 2     && < 3,
                snap                      >= 0.13   && < 0.14,
                snap-core                 >= 0.9   && < 0.10,
                snap-server               >= 0.9   && < 0.10,
                snap-extras               >= 0.9   && < 0.10,
                snap-cors                 >= 1.2   && < 1.3,
                lojbanParser              >= 0.1.2,
                yjtools                   >= 0.9.16,
                aeson                     >= 0.7,
                text                      >= 1.1,
                relmoilojysamban          >= 0.0.9

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
